# GreenInformationFactory_Prototype

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
docs/: howto.html  index.html  make_tour_gif.py  run.html  sync_browser_modules.py
helper/: Template_Generator.ipynb  __init__.py  generate_zenodo_workflow.py  setup_ssh.sh  sustainability_metrics.py  upload_collector.py  zenodo-download-template.yml  zenodo-upload-template.yml
metadata/: pipeline_config.json  prepared_hashes.json  prepared_schema.json  sustainability_assumptions_v1.json  zenodo_download.json  zenodo_params.json
notebooks/: 01_download_store.ipynb  02_prepare_data.ipynb  03_train_optimize.ipynb  04_sustainability_evaluation.ipynb  05_scenario_analysis.ipynb  06_release_zenodo_publication.ipynb  07_literature_ingest.ipynb  08_literature_analytics.ipynb  09_literature_coding_ml.ipynb  10_literature_release.ipynb  Download_and_Store.ipynb  New_Name.ipynb  Prepare_Data.ipynb  Train_and_Optimize_Model-Copy1.ipynb  Train_and_Optimize_Model.ipynb  Untitled.ipynb  Untitled1.ipynb  Upload_Publish.ipynb  smoke test.ipynb  split_and_prepare.ipynb
src/: setup_instructions.md  zenodo_utils.py
tests/: conftest.py  test_browser_bridge.py  test_data.py  test_finder_data.py  test_helpers.py  test_lit_analytics.py  test_lit_ml.py  test_lit_release.py  test_literature.py  test_models_train.py  test_plots.py  test_scenario.py  test_sustainability.py  test_zenodo.py
workflows/: greeninformationfactory-biofairnet-pilot1-testrun-zenodo-upload.yml  zenodo-upload.yml  zenodo_params.json
(+87 files in other folders)
